src/components/header.css
.header-nav-links {
  align-items: stretch;
  display: flex;
  flex-wrap: nowrap;
  font-family: 'Open Sans';
  font-size: 15px;
  font-weight: 400;
  gap: 2px;
  justify-content: flex-end;
  letter-spacing: 1.1px;
  text-transform: uppercase;
  white-space: nowrap;
}
.header-nav-links > a,
.header-nav-links .services-popper {
  align-items: center;
  cursor: pointer;
  display: inherit;
  justify-content: center;
  position: relative;
}
.header-nav-links > a {
  color: #444444;
  text-decoration: none;
  transition: var(--transition-color);
}
.header-nav-links > a:hover {
  color: var(--light-green);
}
#services-menu {
  background-color: var(--white);
  border-top: 3px solid var(--light-green);
  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
  display: flex;
  flex-direction: column;
  transition: var(--transition-opacity);
}

#services-menu > a:not(:last-of-type) {
  border-bottom: 1px solid #eeeeee;
}
#services-menu > a {
  color: #555555;
  cursor: pointer;
  font-family: 'Open Sans';
  font-size: 14px;
  padding: 12px 24px 12px 16px;
  text-transform: none;
  transition: var(--transition-color);
}
#services-menu > a:hover {
  background-color: #f8f8f8;
  color: #555555;
}
.services-popper {
  box-sizing: border-box;
  display: flex;
}
.services-popper-label {
  align-items: center;
  cursor: pointer;
  display: flex;
  flex-wrap: nowrap;
  justify-content: center;
  transition: var(--transition-color);
  white-space: nowrap;
}
.services-popper-label:hover {
  color: var(--light-green);
}

.header-nav-menu {
  display: flex;
}

.services-icon.icon-arrow-down {
  font-size: 10px;
  font-weight: bold;
  padding-left: 8px;
}

.header-nav-menu {
  color: #555555;
  font-size: 15px;
  justify-content: flex-end;
  text-transform: uppercase;
}

.menu-button {
  align-items: center;
  cursor: pointer;
  display: flex;
  flex-shrink: 1;
  flex-wrap: nowrap;
  gap: 6px;
  transition: var(--transition-color);
  white-space: nowrap;
}
.menu-button:hover {
  color: var(--light-green);
}

.close-menu-button,
.toggle-services,
.sidebar > a {
  color: #555555;
  cursor: pointer;
  font-size: 15px;
  transition: var(--transition-color);
}
:is(.close-menu-button, .toggle-services, .sidebar > a):hover {
  color: var(--light-green);
}

.close-menu-button,
.toggle-services,
.sidebar > a {
  align-items: center;
  display: flex;
  justify-content: space-between;
}

.toggle-services {
  flex-grow: 1;
}

.toggle-services,
.sidebar > a {
  color: #555555;
  font-weight: 300;
  letter-spacing: 0.6px;
  padding: 11px 20px;
}

.close-menu-button,
.sidebar > a,
.toggle-services {
  border-bottom: 1px solid #eeeeee;
}

.close-menu-button {
  background-color: #f8f8f8;
  color: #333333;
  font-size: 13px;
  font-weight: 600;
  padding: 12px 20px;
  text-transform: uppercase;
}
.sidebar :is(.icon-close, .icon-plus, .icon-minus) {
  font-size: 15px;
}

.sidebar {
  display: grid;
  grid-auto-rows: min-content;
  grid-template-columns: 300px;
}

.sidebar > a.sidebar-service {
  background-color: #f8f8f8;
  justify-content: flex-start;
}
.sidebar > a.sidebar-service .icon-arrow-right {
  font-size: 10px;
  padding: 10px;
}

/* .svg-logo {
  fill: var(--original-green);
  height: var(--logo-size);
  padding-bottom: 2px;
  stroke-linejoin: round;
  stroke-width: 0.25px;
  transition: var(--transition-filter);
  width: var(--logo-size);
} */
.logo-link {
  align-items: center;
  display: flex;
  flex-wrap: nowrap;
  white-space: nowrap;
}
/* .logo-title {
  height: var(--title-height);
  padding-bottom: var(--title-padding);
  padding-left: 10px;
  padding-right: var(--title-padding);
  padding-top: var(--title-padding);
} */
/* .logo-link:hover .svg-logo {
  filter: var(--filter);
} */
.logo {
  width: 280px;
}
@media screen and (width < 500px) {
  .logo {
    width: 180px;
  }
}
.header-nav {
  align-items: center;
  border-bottom: 1px solid var(--divider-color);
  height: var(--header-height);
}

